# mcp-llm-wiki

./: .dockerignore  .gitignore  Containerfile  Dockerfile.test  LICENSE  README.md  entrypoint.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
audits/: mcp-llm-wiki-2026-05-20.md
examples/skills/llm-wiki/: SKILL.md
examples/skills/llm-wiki-ingest/: SKILL.md
examples/skills/llm-wiki-lint/: SKILL.md
examples/skills/llm-wiki-query/: SKILL.md
merge_drivers/: index_md_merge.sh  log_md_merge.sh
src/mcp_llm_wiki/: __init__.py  __main__.py  clip.py  config.py  git_ops.py  init.py  path_safety.py  sanitizer.py  server.py  wiki_io.py
tests/: conftest.py  test_clip.py  test_config.py  test_e2e_multi_vm.py  test_git_ops.py  test_init.py  test_merge_drivers.py  test_path_safety.py  test_sanitizer.py  test_server_tools.py  test_server_writes.py  test_wiki_io.py
