[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-llm-wiki"
version = "0.1.0"
description = "MCP server that exposes git-backed LLM wikis as MCP tools"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "np6126" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

# Runtime deps of the operator CLIs (wiki-clip needs these; wiki-init is
# pure stdlib). Mandatory, not an optional extra — an extra would leave a
# non-working wiki-clip on the PATH of anyone who installed without it.
# The server's deps are separate; see the [project.scripts] note below.
dependencies = [
  "markitdown>=0.1.5,<0.2",
  "PyYAML>=6.0,<7.0",
]

[project.scripts]
# The MCP server is intentionally not a console script — it runs in its
# container as `python -m mcp_llm_wiki.server` (see entrypoint.sh), and
# its runtime dependencies live in requirements.txt, not in this file.
# Exposing it as a command would only put a broken `mcp-llm-wiki` on the
# PATH of anyone who pipx-installs the package for the operator CLIs.
wiki-clip = "mcp_llm_wiki.clip:main"
wiki-init = "mcp_llm_wiki.init:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "S", "RET", "SIM"]
# S101 (assert) is fine in tests; S603/S607 (subprocess) are unavoidable
# for git invocation.
ignore = ["S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
